Feat: blocking site accourding to work hours Chore: some addition in .prettierrc

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,7 @@
   "tabWidth": 2,
   "bracketSpacing": true,
   "endOfLine": "lf",
+  "arrowParens": "avoid",
   "overrides": [
     {
       "files": ".prettierrc",
